--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ before_script:
   - sleep 5 # give sc-server some time to start
 
 script: phantomjs phantomjs/test_runner.js --no-experimental --exclude-targets=/sproutcore/greenhouse
+
+notifications:
+  email: flase
