--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install: true
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - ./scripts/run_sc_server_master.sh &
+  - ./scripts/run_sc_server_master.sh 
   - sleep 5 # give sc-server some time to start
 
 script: phantomjs phantomjs/test_runner.js --no-experimental --exclude-targets=/sproutcore/greenhouse
