--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 
 script: phantomjs phantomjs/test_runner.js --no-experimental --exclude-targets=/sproutcore/greenhouse
 
-build_image: shippable/minv2:beta
+#build_image: shippable/minv2:beta
 
 
 
